schema/testdata/validation_jobs_invalid_input_types/schema.keel
job MyJob1 {
    inputs {
        foo Foo
        message MyMessage
        model MyModel
    }

    @permission(roles: [Admin])
}

role Admin {}

model MyModel {
    fields {
        name Text
    }
}

message MyMessage {
    name Text
}